# python-jp2a

./: README.md  __init__.py  pyproject.toml  setup.cfg
jp2a/: __main__.py  jp2a.py
